# advent-of-code

./: .gitignore  README.md
elixir/2019/: README.md
elixir/2019/lib/: advent_of_code.ex
elixir/2020/: README.md  mix.exs
go/: .gitignore  README  go.mod  go.sum
go/2022/01/: day01.go  day01_test.go
go/2022/02/: day02.go  day02_test.go
go/2022/03/: day03.go  day03_test.go
go/2022/04/: day04.go  day04_test.go
go/2022/05/: day05.go  day05_test.go
go/2022/06/: day06.go  day06_test.go
go/2022/07/: day07.go  day07_test.go
go/2022/08/: day08.go  day08_test.go
go/utils/: interval.go  slice.go
python/: pyproject.toml
python/2021/: helpers.py
python/python_poetry/: pyproject.toml
python/python_poetry/2020/day_01/: day_01_solution.py
python/python_poetry/2021/day_02/: day_02_solution.py
python/python_poetry/2021/day_03/: day_03_solution.py
python/python_poetry/2021/day_04/: day_04_solution.py
python/python_poetry/2021/day_06/: day_06_solution.py
python/python_poetry/2021/day_09/: day_09_solution.py
python/python_poetry/2021/day_10/: day_10_solution.py
python/python_poetry/2021/day_13/: day_13_solution.py
python/python_poetry/2021/day_14/: day_14_solution.py
python/python_poetry/2021/day_15/: day_15_solution.py
python/python_poetry/2021/day_16/: day_16_solution.py
python/python_poetry/2021/day_17/: day_17_solution.py
python/python_poetry/2021/day_20/: day_20_solution.py
python/python_poetry/2021/day_22/: day_22_solution.py
python/python_poetry/2021/day_24/: day_24_solution.py
python/python_poetry/2021/day_25/: day_25_solution.py
python/python_uv/: README.md  pyproject.toml  uv_utils.py
python/python_uv/2025/day_01/: day_01_solution.py
python/python_uv/2025/day_02/: day_02_solution.py
python/python_uv/2025/day_03/: day_03_solution.py
python/python_uv/2025/day_05/: day_05_solution.py
python/python_uv/2025/day_xx_template/: day_xx_solution.py
ruby/: README  helper.rb  tests.rb
(+237 files in other folders)
