[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code 2021 Solutions"
authors = [
    {name = "Hugo Hache"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=1.21.4",
    "sympy>=1.9",
]

[project.optional-dependencies]
dev = [
    "black>=21.10b0",
    "pytest-pylint>=0.18.0",
    "pytest>=6.2.5",
    "isort>=5.10.1",
]

[project.scripts]
lint = "uv_utils:run_lint"
format = "uv_utils:run_format"
check_isort = "uv_utils:check_isort"
check_format = "uv_utils:check_format"
all_solutions = "uv_utils:run_all_days"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--pylint ./2020/ ./ --pylint-jobs=4"

[tool.pylint.message_control]
disable = "line-too-long"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "uv_utils.py",
    "2020/**/*",
    "2021/**/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

